--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
       <div class="toolbar">
         <input id="q" type="search" placeholder="Search name/effect/tagâ€¦">
         <select id="bucket">
-          <option value="All" selected>All</option><option value="items">Items</option><option value="weapons">Weapons</option><option value="upgrades">Upgrades</option>
+          <option value="All" selected>All</option><option value="items">Items</option><option value="weapons">Weapons</option><option value="upgrades">Upgrades</option><option value="sets">Sets</option>
         </select>
         <select id="cat">
           <option value="All">All</option>
@@ -643,6 +643,7 @@ async function loadData() {
     const itemsCount = DATA_ARR.filter(item => item.bucket === 'items').length;
     const weaponsCount = DATA_ARR.filter(item => item.bucket === 'weapons').length;
     const upgradesCount = DATA_ARR.filter(item => item.bucket === 'upgrades').length;
+    const setsCount = DATA_ARR.filter(item => item.bucket === 'sets').length;
     const noBucketCount = DATA_ARR.filter(item => !item.bucket).length;
     const totalCount = DATA_ARR.length;
     
@@ -650,6 +651,7 @@ async function loadData() {
     console.log(`  - Items: ${itemsCount}`);
     console.log(`  - Weapons: ${weaponsCount}`);
     console.log(`  - Upgrades: ${upgradesCount}`);
+    console.log(`  - Sets: ${setsCount}`);
     console.log(`  - No bucket: ${noBucketCount}`);
     
     // Log first few items to check bucket values
