Remove 'Sets' option from bucket dropdown
The 'Sets' option was removed from the #bucket select element in index.html, likely to simplify the filter options or because the 'Sets' category is no longer relevant.

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
       <div class="toolbar">
         <input id="q" type="search" placeholder="Search name/effect/tagâ€¦">
         <select id="bucket">
-          <option value="All" selected>All</option><option value="items">Items</option><option value="weapons">Weapons</option><option value="upgrades">Upgrades</option><option value="sets">Sets</option>
+          <option value="All" selected>All</option><option value="items">Items</option><option value="weapons">Weapons</option><option value="upgrades">Upgrades</option>
         </select>
         <select id="cat">
           <option value="All">All</option>
