Rebalance and refactor item stats and effects
This commit updates numerous items in details.json, adjusting stats (armor, attack, health, speed) and rebalancing effects for consistency and gameplay balance. Several items have had their triggers, actions, and conditions refactored for clarity and uniformity. Some items (e.g., Bee Stinger, Citrine Ring) were removed, while new items like Liferoot Tome were added. Many items had their effect values, triggers, or stat bonuses changed to better align with intended mechanics.

--- a/index.html
+++ b/index.html
@@ -597,7 +597,8 @@ async function loadData() {
       const res = await fetch('details.json', { cache: 'no-store' });
       if (res.ok) {
         const fromJson = await res.json();
-        RAW_DATA = Object.assign({}, fromJson, RAW_DATA);
+        // Prioritize JSON data, but keep JS data as a fallback.
+        RAW_DATA = Object.assign({}, RAW_DATA, fromJson); 
       }
     } catch(_fetchErr) {
       // ignore fetch failure (e.g., file://), rely on details.js
