Update README and add CSS line-clamp property
Improved the README formatting and section titles for clarity. Added the standard CSS 'line-clamp' property to the .card .effect class in index.html for better cross-browser support.

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
   .card .effect {
     display: -webkit-box;
     -webkit-line-clamp: 2;
+    line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
   }
