chore: push test - add no-op HTML comment

--- a/index.html
+++ b/index.html
@@ -7013,7 +7013,7 @@ if (document.readyState === 'loading') {
   setTimeout(__compendiumBoot, 0);
 }
 </script>
+<!-- push test: 2025-09-24 16:21:38 -04:00 -->
 
 </body>
 </html>
-
