Update item stats and audit report for latest changes
Synchronized item stats in compiled_details.json for Cherry Bomb, Citrine Earring, Clearspring Watermelon, and Cracked Whetstone. Updated audit_wiki_report.json to reflect new mismatches, removed many tag and override entries, and adjusted summary counts and change statistics. These changes bring the audit and compiled details in line with the latest item data.

--- a/index.html
+++ b/index.html
@@ -1380,6 +1380,51 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
                 <span>   Water</span>
                 <span class="count" style="margin-left: auto; color: #aaa; font-size: 10px;">0</span>
               </label>
+              <label class="facet-option" style="display: flex; align-items: center; gap: 8px; padding: 4px 8px; border-radius: 4px; cursor: pointer; font-size: 11px;">
+                <input type="checkbox" name="tag" value="Wood" style="accent-color: #8b5a2b;">
+                <span>   Wood</span>
+                <span class="count" style="margin-left: auto; color: #aaa; font-size: 10px;">0</span>
+              </label>
+              <label class="facet-option" style="display: flex; align-items: center; gap: 8px; padding: 4px 8px; border-radius: 4px; cursor: pointer; font-size: 11px;">
+                <input type="checkbox" name="tag" value="Rune" style="accent-color: #00ced1;">
+                <span>   Rune</span>
+                <span class="count" style="margin-left: auto; color: #aaa; font-size: 10px;">0</span>
+              </label>
+              <label class="facet-option" style="display: flex; align-items: center; gap: 8px; padding: 4px 8px; border-radius: 4px; cursor: pointer; font-size: 11px;">
+                <input type="checkbox" name="tag" value="Potion" style="accent-color: #66ccff;">
+                <span>   Potion</span>
+                <span class="count" style="margin-left: auto; color: #aaa; font-size: 10px;">0</span>
+              </label>
+              <label class="facet-option" style="display: flex; align-items: center; gap: 8px; padding: 4px 8px; border-radius: 4px; cursor: pointer; font-size: 11px;">
+                <input type="checkbox" name="tag" value="Crone" style="accent-color: #c71585;">
+                <span>   Crone</span>
+                <span class="count" style="margin-left: auto; color: #aaa; font-size: 10px;">0</span>
+              </label>
+              <label class="facet-option" style="display: flex; align-items: center; gap: 8px; padding: 4px 8px; border-radius: 4px; cursor: pointer; font-size: 11px;">
+                <input type="checkbox" name="tag" value="Rose" style="accent-color: #ff6699;">
+                <span>   Rose</span>
+                <span class="count" style="margin-left: auto; color: #aaa; font-size: 10px;">0</span>
+              </label>
+              <label class="facet-option" style="display: flex; align-items: center; gap: 8px; padding: 4px 8px; border-radius: 4px; cursor: pointer; font-size: 11px;">
+                <input type="checkbox" name="tag" value="Mythic" style="accent-color: #bb86fc;">
+                <span>   Mythic</span>
+                <span class="count" style="margin-left: auto; color: #aaa; font-size: 10px;">0</span>
+              </label>
+              <label class="facet-option" style="display: flex; align-items: center; gap: 8px; padding: 4px 8px; border-radius: 4px; cursor: pointer; font-size: 11px;">
+                <input type="checkbox" name="tag" value="Sanguine" style="accent-color: #dc143c;">
+                <span>   Sanguine</span>
+                <span class="count" style="margin-left: auto; color: #aaa; font-size: 10px;">0</span>
+              </label>
+              <label class="facet-option" style="display: flex; align-items: center; gap: 8px; padding: 4px 8px; border-radius: 4px; cursor: pointer; font-size: 11px;">
+                <input type="checkbox" name="tag" value="Unique" style="accent-color: #ffaa00;">
+                <span>   Unique</span>
+                <span class="count" style="margin-left: auto; color: #aaa; font-size: 10px;">0</span>
+              </label>
+              <label class="facet-option" style="display: flex; align-items: center; gap: 8px; padding: 4px 8px; border-radius: 4px; cursor: pointer; font-size: 11px;">
+                <input type="checkbox" name="tag" value="Forge Upgrades" style="accent-color: #f4a261;">
+                <span>   Edge</span>
+                <span class="count" style="margin-left: auto; color: #aaa; font-size: 10px;">0</span>
+              </label>
             </div>
           </div>
           
