Add effect descriptions to set items
Added explicit 'effect' fields to various set items in details.js, details.json, and compiled_details.json. Updated audit_wiki_report.json to reflect that set effects are now present, and reset effectChanges count. This improves clarity and consistency for set item effects across the data files.

--- a/index.html
+++ b/index.html
@@ -1941,6 +1941,7 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
 <script src="heic_sim.js" defer></script>
 <script src="heic_effects.js"></script>
 <script src="heic_sets.js"></script>
+<script src="heic_sets.generated.js"></script>
 
 <script>
 /* Battle Replay System - Icon Renderer Module */
